@@ -1,3 +1,4 @@
+Mantle label pushed down in continental collision cases
 Non-divergent crust / lithosphere labels made stationary
 Added "boundary" labeling between mantle and lithosphere.
 Density sensor now will read out correct land / water density values when positioned over the earth "top" i.e. water surface or earth surface.
